move plate-only expansion after validations so that series refs make sense

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -81,8 +81,8 @@
     "    validate_values('LIFESTAGE', df[~is_blank], valid_dict, na_values=[''])\n",
     "    validate_values('SEX', df[~is_blank], valid_dict, na_values=[''])\n",
     "    validate_values('SORTING_SOLUTION_USED', df[~is_blank], valid_dict)\n",
-    "    validate_values('CATCH_BOTTLE_TEMPERATURE_STORAGE', df[~is_blank], valid_dict)\n",
-    "    validate_values('PLATE_TEMPERATURE_STORAGE', df[~is_blank], valid_dict)\n",
+    "    validate_values('CATCH_BOTTLE_TEMPERATURE_STORAGE', df[~is_blank], valid_dict, na_values=[''])\n",
+    "    validate_values('PLATE_TEMPERATURE_STORAGE', df[~is_blank], valid_dict, na_values=[''])\n",
     "    \n",
     "    # white cols - validated for all samples\n",
     "    validate_freetext('MORPHOSPECIES_DESCRIPTION', df)\n",
@@ -98,6 +98,7 @@
     "    # IDENTIFIED_BY not checked\n",
     "    # IDENTIFIER_AFFILIATION not checked\n",
     "    \n",
+    "    df = expand_plate_only(df)\n",
     "    df = add_sts_cols(df, contrib_df, gal=gal)\n",
     "    if write_sts:\n",
     "        write_sts_manifest(df, fn, VALIDATION_VERSION)\n",
@@ -118,7 +119,7 @@
     "df = validate_bioscan(fn='../data/BIOSCAN_Manifest_V2.0_20230217.xlsx', \n",
     "                      gal='Sanger Institute',\n",
     "                      template_fn='../data/BIOSCAN_Manifest_V2.0_20230217.xlsx', \n",
-    "                      verbose=False,\n",
+    "                      verbose=True,\n",
     "                      samples_sheet='TAB 5 DO NOT EDIT - TEST Met',\n",
     "                      write_sts=True)"
    ]
@@ -140,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230712_js_batch1/NEWI_2023_BIOSCAN_Manifest_V2.0.xlsx'\n",
+    "fn = '../results/20230712_js_batch1/[NENM]_[2307]_BIOSCAN_Manifest_V2.0.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
   },
