--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -343,28 +343,12 @@
     "    row_id = list('ABCDEFGH')\n",
     "    col_id = range(1,13)\n",
     "    expected_wells = [r + str(c) for (r,c) in itertools.product(row_id, col_id)]\n",
-    "    \n",
-    "    pdfs = []\n",
-    "    \n",
+    "        \n",
     "    for plate, pdf in df.groupby(plate_col):\n",
-    "        # If plate level only metadata is being entered\n",
-    "        # put “PLATE_ONLY” in well \n",
-    "        # and use only one row to capture the metadata for the whole plate\n",
+    "        \n",
     "        if bioscan and (pdf[well_col] == 'PLATE_ONLY').any():\n",
-    "            logging.warning(f'found PLATE_ONLY plate {plate}, expanding to well-level')\n",
-    "            if pdf.shape[0] > 1:\n",
-    "                logging.error(f'too many rows in PLATE_ONLY plate {plate}, expected one')\n",
-    "            # expand to 96 rows\n",
-    "            pdf = pd.DataFrame(pdf.iloc[0] for i in range(len(expected_wells)))\n",
-    "            pdf[well_col] = expected_wells\n",
-    "            # H12 blank\n",
-    "            for col in pdf.columns:\n",
-    "                if col == 'ORGANISM_PART':\n",
-    "                    pdf[col].iloc[-1]='NOT_APPLICABLE'\n",
-    "                elif col not in ['SERIES','CATCH_LOT','RACK_OR_PLATE_ID',\n",
-    "                                 'TUBE_OR_WELL_ID','ORGANISM_PART','PRESERVATIVE_SOLUTION']:\n",
-    "                    pdf[col].iloc[-1]=''\n",
-    "            #print(pdf.iloc[-3:,:3])\n",
+    "            logging.debug(f'skipping well validation for PLATE_ONLY plate {plate}')\n",
+    "        \n",
     "        # check for well duplicates\n",
     "        dup_wells =  pdf[well_col].duplicated()\n",
     "        if dup_wells.any():\n",
@@ -381,18 +365,59 @@
     "                    msg += ', '\n",
     "                msg += f'wells {observed_wells_set - expected_wells_set} are excessive'\n",
     "            logging.error(msg)\n",
-    "        pdfs.append(pdf)\n",
     "    \n",
-    "    if bioscan and (df[well_col] == 'PLATE_ONLY').any():\n",
-    "        df = pd.concat(pdfs).reset_index(drop=True)\n",
-    "        df.index.name = 'SERIES'\n",
     "    logging.info(f'found {df.shape[0]} samples across {df[plate_col].nunique()} plates')\n",
-    "    \n",
-    "    \n",
     "    \n",
     "    return df\n",
     "        \n",
     "# df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def expand_plate_only(df, plate_col='RACK_OR_PLATE_ID', well_col='TUBE_OR_WELL_ID'):\n",
+    "    \n",
+    "    # add 96-well plate well IDs for expansion\n",
+    "    row_id = list('ABCDEFGH')\n",
+    "    col_id = range(1,13)\n",
+    "    expected_wells = [r + str(c) for (r,c) in itertools.product(row_id, col_id)]\n",
+    "    \n",
+    "    if (df[well_col] == 'PLATE_ONLY').any():\n",
+    "        pdfs = []\n",
+    "\n",
+    "        for plate, pdf in df.groupby(plate_col):\n",
+    "            # If plate level only metadata is being entered\n",
+    "            # put “PLATE_ONLY” in well \n",
+    "            # and use only one row to capture the metadata for the whole plate\n",
+    "            if (pdf[well_col] == 'PLATE_ONLY').any():\n",
+    "                logging.warning(f'found PLATE_ONLY plate {plate}, expanding to 96 well rows')\n",
+    "                if pdf.shape[0] > 1:\n",
+    "                    logging.error(f'too many rows in PLATE_ONLY plate {plate}, expected one, extracting metadata')\n",
+    "                # expand to 96 rows\n",
+    "                pdf = pd.DataFrame(pdf.iloc[0] for i in range(len(expected_wells)))\n",
+    "                pdf[well_col] = expected_wells\n",
+    "                # H12 blank\n",
+    "                for col in pdf.columns:\n",
+    "                    if col == 'ORGANISM_PART':\n",
+    "                        pdf[col].iloc[-1]='NOT_APPLICABLE'\n",
+    "                    elif col not in ['SERIES','CATCH_LOT','RACK_OR_PLATE_ID',\n",
+    "                                     'TUBE_OR_WELL_ID','ORGANISM_PART','PRESERVATIVE_SOLUTION']:\n",
+    "                        pdf[col].iloc[-1]=''\n",
+    "            pdfs.append(pdf)\n",
+    "            \n",
+    "        df = pd.concat(pdfs).reset_index(drop=True)\n",
+    "        df.index.name = 'SERIES'\n",
+    "        \n",
+    "    else:\n",
+    "        logging.debug('no PLATE_ONLY rows found')\n",
+    "    \n",
+    "    return df\n",
+    "    \n",
+    "        "
    ]
   },
   {
@@ -944,9 +969,8 @@
     "    invalid_risk = ((df.PREDICTED_SCIENTIFIC_NAME == '') & (df.SPECIMEN_IDENTITY_RISK == 'N'))\n",
     "    \n",
     "    if invalid_risk.any():\n",
-    "        invalid_risk_values = list(df.loc[invalid_risk, 'SPECIMEN_IDENTITY_RISK'].unique())\n",
-    "        logging.error(f'SPECIMEN_IDENTITY_RISK column, SERIES {index_ranges(df.loc[invalid_risk])}: '\n",
-    "                      f'values should be blank or \"Y\", not {invalid_risk_values}')\n",
+    "        logging.error(f'SERIES {index_ranges(df.loc[invalid_risk])}: with no PREDICTED_SCIENTIFIC_NAME, '\n",
+    "                      f'SPECIMEN_IDENTITY_RISK values should be blank or \"Y\", not \"N\"')\n",
     "\n",
     "# validate_specimen_id_risk(df)"
    ]
