fix well order in plate expansion

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -384,7 +384,7 @@
     "    # add 96-well plate well IDs for expansion\n",
     "    row_id = list('ABCDEFGH')\n",
     "    col_id = range(1,13)\n",
-    "    expected_wells = [r + str(c) for (r,c) in itertools.product(row_id, col_id)]\n",
+    "    expected_wells = [r + str(c) for (c,r) in itertools.product(col_id, row_id)]\n",
     "    \n",
     "    if (df[well_col] == 'PLATE_ONLY').any():\n",
     "        pdfs = []\n",
