what3words validation, clean up messaging

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -98,7 +98,7 @@
     "    date_pres = validate_date('DATE_OF_PRESERVATION', df, na_values=['']) # allow for empty values unlike DATE_OF_COLLECTION\n",
     "    compare_dates(before=date_coll, after=date_pres)\n",
     "    validate_float('ELEVATION', df, na_values=[''])\n",
-    "    # WHAT_3_WORDS not checked\n",
+    "    validate_wtw('WHAT_3_WORDS', df[~is_blank], na_values=[''])\n",
     "    validate_freetext('OTHER_ORGANISMS', df)\n",
     "    validate_freetext('BIOASSAYS', df)\n",
     "    validate_freetext('COLLECTOR_SAMPLE_ID', df)\n",
