--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -68,7 +68,7 @@
     "    # COLLECTION_LOCATION not checked\n",
     "    \n",
     "    # purple cols - valiated for non-blank samples\n",
-    "    # WHAT_3_WORDS not checked\n",
+    "    validate_wtw('WHAT_3_WORDS', df[~is_blank], na_values=[''])\n",
     "    validate_time('TIME_OF_COLLECTION', df[~is_blank])\n",
     "    validate_time_period('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED'])\n",
     "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict)\n",
@@ -116,10 +116,10 @@
    "outputs": [],
    "source": [
     "# fn = '../../results/partner_manifests/IRD-Neandersquito_T222Amplicon_Manifest_V2.0.xlsx'\n",
-    "df = validate_bioscan(fn='../data/BIOSCAN_Manifest_V2.0_20230217.xlsx', \n",
+    "df = validate_bioscan(fn='../data/BIOSCAN_Manifest_V2.0_20230727.xlsx', \n",
     "                      gal='Sanger Institute',\n",
-    "                      template_fn='../data/BIOSCAN_Manifest_V2.0_20230217.xlsx', \n",
-    "                      verbose=True,\n",
+    "                      template_fn='../data/BIOSCAN_Manifest_V2.0_20230727.xlsx', \n",
+    "                      verbose=False,\n",
     "                      samples_sheet='TAB 5 DO NOT EDIT - TEST Met',\n",
     "                      write_sts=True)"
    ]
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfea83ce",
+   "id": "eb270213",
    "metadata": {},
    "outputs": [],
    "source": []
