fix case in output taxonomy cols, add catch solution for bioscan sts output

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -78,7 +78,7 @@
     "    validate_values('SAMPLING_LOCATION_SIZE', df[~is_blank], valid_dict)\n",
     "    \n",
     "    # purple cols - validate non-blank samples only\n",
-    "    validate_taxonomy(df, ncbi, anospp=True, na_values = [''])\n",
+    "    df = validate_taxonomy(df, ncbi, anospp=True, na_values = [''])\n",
     "    validate_values('SPECIMEN_IDENTITY_RISK', df[~is_blank], valid_dict, na_values = [''])\n",
     "    validate_specimen_id_risk(df)\n",
     "    validate_freetext('IDENTIFIED_HOW', df[~is_blank])\n",
