--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -75,7 +75,7 @@
     "    date_plat = validate_date('DATE_OF_PLATING', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    compare_dates(before=date_coll, after=date_plat)\n",
     "    # taxonomy validation adds taxid columns to original dataframe - skipping for now\n",
-    "    validate_taxonomy(df, ncbi, anospp=False, na_values = [''])\n",
+    "    df = validate_taxonomy(df, ncbi, anospp=False, na_values = [''])\n",
     "    validate_values('SPECIMEN_IDENTITY_RISK', df[~is_blank], valid_dict, na_values=[''])\n",
     "    validate_specimen_id_risk(df)\n",
     "    validate_values('LIFESTAGE', df[~is_blank], valid_dict, na_values=[''])\n",
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb270213",
+   "id": "93de6d96",
    "metadata": {},
    "outputs": [],
    "source": []
