--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -1012,6 +1012,10 @@
     "    if add_taxids:\n",
     "        for tc in tax_levels.keys():\n",
     "            df[f'{tc}_TAXID'] = df[tc].replace(tax_info[tax_levels[tc]])\n",
+    "    \n",
+    "    # only fix taxonomy case after validation to get naming \n",
+    "    for tax_col in tax_levels.keys():\n",
+    "        df[tax_col] = df[tax_col].str.capitalize()\n",
     "            \n",
     "    return df\n",
     "        \n",
@@ -1122,6 +1126,7 @@
     "    df['SYMBIONT'] = 'TARGET'\n",
     "    df['REGULATORY_COMPLIANCE'] = 'Y'\n",
     "    df['HAZARD_GROUP'] = 'HG1'\n",
+    "    df['CATCH_SOLUTION'] = '100%_ETHANOL'\n",
     "    # add contributors - delimiters checked in validate_contributors\n",
     "    contrib_series = contrib_df['FULL_NAME'] + ';' + \\\n",
     "        contrib_df['PRIMARY_AFFILIATION'] + ';' + \\\n",
