auto-fixes messages to info as changed in sts output

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -167,8 +167,8 @@
     "    for col in df.columns:\n",
     "        trailing_spaces = (df[col].str.startswith(' ') | df[col].str.endswith(' '))\n",
     "        if trailing_spaces.any():\n",
-    "            logging.warning(f'trailing spaces found in {col} column, '\n",
-    "                            f'SERIES {index_ranges(df.loc[trailing_spaces])} - removing for validation')\n",
+    "            logging.info(f'trailing spaces found in {col} column, '\n",
+    "                         f'SERIES {index_ranges(df.loc[trailing_spaces])} - removing for validation and output')\n",
     "            df[col] = df[col].str.strip()\n",
     "            \n",
     "    return df\n",
@@ -186,8 +186,8 @@
     "    for col in df.columns:\n",
     "        nonbreaking_spaces = df[col].str.contains(u\"\\u00A0\")\n",
     "        if nonbreaking_spaces.any():\n",
-    "            logging.warning(f'non-breaking spaces found in {col} column, '\n",
-    "                            f'SERIES {index_ranges(df.loc[nonbreaking_spaces])} - removing for validation')\n",
+    "            logging.info(f'non-breaking spaces found in {col} column, '\n",
+    "                         f'SERIES {index_ranges(df.loc[nonbreaking_spaces])} - removing for validation and output')\n",
     "            df[col] = df[col].str.replace(u\"\\u00A0\", \" \")\n",
     "            \n",
     "    return df"
@@ -876,9 +876,9 @@
     "            corr_tax_name = tax_name[0].upper() + tax_name[1:].lower()\n",
     "            if corr_tax_name != tax_name and tax_name != 'blank sample':\n",
     "                s = index_ranges(df.query(f'{tax_col} == \"{tax_name}\"'))\n",
-    "                logging.error(f'{tax_col} column, SERIES {s}'\n",
-    "                              f': unexpected case for \"{tax_name}\", '\n",
-    "                              f'changing to \"{corr_tax_name}\" for validation')\n",
+    "                logging.info(f'{tax_col} column, SERIES {s}'\n",
+    "                             f': unexpected case for \"{tax_name}\", '\n",
+    "                             f'changing to \"{corr_tax_name}\" for validation and output')\n",
     "            tax_names[i] = corr_tax_name\n",
     "        \n",
     "        tax_info[tax_level] = ncbi.get_name_translator(tax_names) \n",
