fixes and notes from v3 sop, catch lot validation, infer gal from plate, tax rank valid lists

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_bioscan(fn, gal='Sanger Institute', template_fn='../data/BIOSCAN_Manifest_V2.0_20230217.xlsx', \n",
+    "def validate_bioscan(fn, template_fn='../data/BIOSCAN_Manifest_V2.0_20230727.xlsx', \n",
     "                     samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', \n",
     "                     verbose=False, write_sts=True):\n",
     "    '''\n",
@@ -49,8 +49,8 @@
     "    contrib_df = validate_contributors(fn, contrib_sheet=contrib_sheet)\n",
     "\n",
     "    # orange cols\n",
-    "    validate_freetext('CATCH_LOT', df, na_values=[])\n",
-    "    df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True)\n",
+    "    validate_catch_lot('CATCH_LOT', df, na_values=[''])\n",
+    "    df, gal = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True)\n",
     "    # check and exclude blanks\n",
     "    is_blank = check_blanks(df)\n",
     "    if df[~is_blank].shape[0] == 0:\n",
@@ -59,7 +59,7 @@
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
     "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
     "    # columns below validated for non-blank samples only\n",
-    "    validate_values('BOTTLE_DIRECTION', df[~is_blank], valid_dict)\n",
+    "    validate_values('BOTTLE_DIRECTION', df[~is_blank], valid_dict) # TODO allow for blank in non-Malaise trap samples\n",
     "    date_coll = validate_date('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_float('DECIMAL_LATITUDE', df[~is_blank])\n",
     "    validate_float('DECIMAL_LONGITUDE', df[~is_blank])\n",
@@ -69,7 +69,7 @@
     "    \n",
     "    # purple cols - valiated for non-blank samples\n",
     "    validate_wtw('WHAT_3_WORDS', df[~is_blank], na_values=[''])\n",
-    "    validate_time('TIME_OF_COLLECTION', df[~is_blank])\n",
+    "    validate_time('TIME_OF_COLLECTION', df[~is_blank], bioscan=True)\n",
     "    validate_time_period('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED'])\n",
     "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict)\n",
     "    date_plat = validate_date('DATE_OF_PLATING', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
@@ -80,7 +80,7 @@
     "    validate_specimen_id_risk(df)\n",
     "    validate_values('LIFESTAGE', df[~is_blank], valid_dict, na_values=[''])\n",
     "    validate_values('SEX', df[~is_blank], valid_dict, na_values=[''])\n",
-    "    validate_values('SORTING_SOLUTION_USED', df[~is_blank], valid_dict)\n",
+    "    validate_values('SORTING_SOLUTION_USED', df[~is_blank], valid_dict, na_values=[''])\n",
     "    validate_values('CATCH_BOTTLE_TEMPERATURE_STORAGE', df[~is_blank], valid_dict, na_values=[''])\n",
     "    validate_values('PLATE_TEMPERATURE_STORAGE', df[~is_blank], valid_dict, na_values=[''])\n",
     "    \n",
@@ -99,7 +99,7 @@
     "    # IDENTIFIER_AFFILIATION not checked\n",
     "    \n",
     "    df = expand_plate_only(df)\n",
-    "    df = add_sts_cols(df, contrib_df, gal=gal)\n",
+    "    df = add_sts_cols(df, contrib_df, gal)\n",
     "    if write_sts:\n",
     "        write_sts_manifest(df, fn, VALIDATION_VERSION)\n",
     "        \n",
@@ -117,7 +117,6 @@
    "source": [
     "# fn = '../../results/partner_manifests/IRD-Neandersquito_T222Amplicon_Manifest_V2.0.xlsx'\n",
     "df = validate_bioscan(fn='../data/BIOSCAN_Manifest_V2.0_20230727.xlsx', \n",
-    "                      gal='Sanger Institute',\n",
     "                      template_fn='../data/BIOSCAN_Manifest_V2.0_20230727.xlsx', \n",
     "                      verbose=False,\n",
     "                      samples_sheet='TAB 5 DO NOT EDIT - TEST Met',\n",
@@ -148,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93de6d96",
+   "id": "43a0cf51",
    "metadata": {},
    "outputs": [],
    "source": []
