--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -113,13 +113,15 @@
     "    logging.debug('validating SERIES column')\n",
     "    \n",
     "    if df.index.duplicated().any():\n",
-    "        logging.error(f'duplicate SERIES column values: {df.index[df.index.duplicated()].to_list()}')\n",
+    "        logging.error(f'duplicate SERIES column values: {df.index[df.index.duplicated()].to_list()}, '\n",
+    "                      f'references to these SERIES can be wrong')\n",
     "    \n",
     "    # exclude non-numeric SERIES - these don't work with ranges\n",
     "    series_numeric = df.index.astype(str).str.isnumeric()\n",
     "    if not series_numeric.all():\n",
-    "        logging.error(f'found and excluded rows with non-numeric SERIES column values: '\n",
-    "                      f'{df.index[~series_numeric].to_list()}')\n",
+    "        logging.error(f'found rows with non-numeric SERIES column values: '\n",
+    "                      f'{df.index[~series_numeric].to_list()} - '\n",
+    "                      f'these will be excluded from validation and output')\n",
     "        df = df.loc[series_numeric]\n",
     "        \n",
     "    # check the remaining SERIES are continuous\n",
@@ -312,7 +314,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def validate_catch_lot(col, df, na_values=[]):\n",
+    "    \n",
+    "    logging.debug(f'validating catch lot format in {col} column')\n",
+    "    \n",
+    "    if col not in df.columns:\n",
+    "        logging.error(f'{col} column not found in manifest')\n",
+    "        return\n",
+    "    series = df[col]\n",
+    "    series = exclude_missing(series, na_values)\n",
+    "    \n",
+    "    regex = '^C\\d{3}[A-Z]$'\n",
+    "    \n",
+    "    is_valid_catch_lot = series.str.match(regex)\n",
+    "    if not is_valid_catch_lot.all():\n",
+    "        offending_values = series[~is_valid_catch_lot].unique()\n",
+    "        s = index_ranges(series[~is_valid_catch_lot])\n",
+    "        logging.error(f'{col} format incorrect for SERIES {s}: found {offending_values} - expected to be like C123A')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def validate_plates_wells(df, contrib_df, plate_col='RACK_OR_PLATE_ID', well_col='TUBE_OR_WELL_ID', bioscan=False):\n",
+    "    \n",
+    "    bioscan_partners_fn = '../data/bioscan_partners.tsv'\n",
     "    \n",
     "    # expect only complete 96-well plates\n",
     "    logging.debug(f'validating {plate_col} and {well_col} columns')\n",
@@ -328,14 +358,30 @@
     "    wrong_plate_names = plates[~plates.str.match(plate_name_template, na='')]\n",
     "    if len(wrong_plate_names) > 0:\n",
     "        logging.error(f'plate names {wrong_plate_names.to_list()} do not match template ABCD_1234')\n",
-    "    # check plate name prefixes prefixes\n",
+    "    # check plate name prefixes against partner codes\n",
+    "    # and assign GAL\n",
     "    plate_prefixes = plates.str.slice(0,4)\n",
     "    if bioscan:\n",
-    "        # todo read partners table to feed GAL\n",
-    "        partners_df = pd.read_csv('../data/bioscan_partners.tsv', sep='\\t', dtype=str)\n",
+    "        partners_df = pd.read_csv(bioscan_partners_fn, sep='\\t', dtype=str)\n",
+    "        assert partners_df['partner_code'].is_unique, f'duplicated partner codes found in {bioscan_partners_fn}'\n",
     "        unknown_prefixes = (~plate_prefixes.isin(partners_df['partner_code']))\n",
+    "        \n",
+    "        possible_partner_codes = plate_prefixes.value_counts().index.to_list()\n",
+    "        if len(possible_partner_codes) > 1:\n",
+    "            logging.error(f'only one plate ID prefix expected, found multiple: {possible_partner_codes}')\n",
+    "        selected_partner_code = possible_partner_codes[0]\n",
+    "        selected_partner_df = partners_df.query(f'partner_code == \"{selected_partner_code}\"')\n",
+    "        if selected_partner_df.shape[0] == 0:\n",
+    "            logging.error(f'partner code {selected_partner_code} not found in {bioscan_partners_fn}, '\n",
+    "                          f'using \"Sanger Institute\" as default option')\n",
+    "            gal = \"Sanger Institute\"\n",
+    "        else:\n",
+    "            gal = selected_partner_df['gal'].iloc[0]\n",
+    "        logging.info(f'selected GAL \"{gal}\" for partner code \"{selected_partner_code}\"')\n",
     "    else:\n",
+    "        # anospp\n",
     "        unknown_prefixes = (~plate_prefixes.isin(contrib_df['PARTNER_CODE']))\n",
+    "        gal = \"Sanger Institute\"\n",
     "    if unknown_prefixes.any():\n",
     "        logging.error(f'plate ID prefixes not recognised for {plates[unknown_prefixes].to_list()}')\n",
     "        \n",
@@ -348,6 +394,7 @@
     "        \n",
     "        if bioscan and (pdf[well_col] == 'PLATE_ONLY').any():\n",
     "            logging.debug(f'skipping well validation for PLATE_ONLY plate {plate}')\n",
+    "            continue\n",
     "        \n",
     "        # check for well duplicates\n",
     "        dup_wells =  pdf[well_col].duplicated()\n",
@@ -368,7 +415,8 @@
     "    \n",
     "    logging.info(f'{df.shape[0]} samples found across {df[plate_col].nunique()} plates')\n",
     "    \n",
-    "    return df\n",
+    "\n",
+    "    return df, gal\n",
     "        \n",
     "# df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')"
    ]
@@ -394,9 +442,10 @@
     "            # put “PLATE_ONLY” in well \n",
     "            # and use only one row to capture the metadata for the whole plate\n",
     "            if (pdf[well_col] == 'PLATE_ONLY').any():\n",
-    "                logging.warning(f'found PLATE_ONLY plate {plate}, expanding to 96 well rows')\n",
+    "                logging.info(f'found PLATE_ONLY plate {plate}, expanding to 96 well rows')\n",
     "                if pdf.shape[0] > 1:\n",
-    "                    logging.error(f'too many rows in PLATE_ONLY plate {plate}, expected one, extracting metadata')\n",
+    "                    logging.error(f'expected one row in PLATE_ONLY plate {plate}, found {pdf.shape[0]} - '\n",
+    "                                  f'extracting metadata from first row only')\n",
     "                # expand to 96 rows\n",
     "                pdf = pd.DataFrame(pdf.iloc[0] for i in range(len(expected_wells)))\n",
     "                pdf[well_col] = expected_wells\n",
@@ -528,6 +577,8 @@
    "source": [
     "def validate_date(col, df, na_values=[]):\n",
     "    \n",
+    "    # TODO allow for YYYY-MM, YYYY, harmonise code with hooks implementation (regex)\n",
+    "    \n",
     "    logging.debug(f'validating date format in {col} column')\n",
     "\n",
     "    if col not in df.columns:\n",
@@ -579,7 +630,7 @@
    "source": [
     "def compare_dates(before, after):\n",
     "    '''\n",
-    "    comparing series generated by validate_date\n",
+    "    comparing series generated by validate_date, harmonise code with hooks implementation (regex)\n",
     "    '''    \n",
     "    \n",
     "    logging.debug(f'checking that {before.name} is earlier than {after.name}')\n",
@@ -625,7 +676,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_time(col, df, na_values=[]):\n",
+    "def validate_time(col, df, na_values=[], bioscan=False):\n",
+    "    \n",
+    "    # TODO harmonise code with hooks implementation (regex)\n",
     "    \n",
     "    logging.debug(f'validating time format in {col} column')\n",
     "    \n",
@@ -636,8 +689,10 @@
     "    series = exclude_missing(series, na_values)\n",
     "        \n",
     "    # invalid time formats\n",
+    "    # bioscan sheet format yields HH:MM:SS instead of HH:MM\n",
+    "    time_format = '%H:%M:%S' if bioscan else '%H:%M'\n",
     "    # NB empty string converted to NaT\n",
-    "    time_series = pd.to_datetime(series, format='%H:%M', errors='coerce')\n",
+    "    time_series = pd.to_datetime(series, format=time_format, errors='coerce')\n",
     "    if time_series.isna().any():\n",
     "        logging.error(\n",
     "            f'invalid time format in {col} column, SERIES {index_ranges(time_series[time_series.isna()])}: '\n",
@@ -848,6 +903,13 @@
     "        'PREDICTED_SCIENTIFIC_NAME':'species'\n",
     "    }\n",
     "    \n",
+    "    expected_ranks = {\n",
+    "            'order':('order','class'),\n",
+    "            'family':('family','superfamily','subfamily','tribe','subtribe'),\n",
+    "            'genus':('genus','subgenus'),\n",
+    "            'species':('species')\n",
+    "        }\n",
+    "    \n",
     "    hierarchies = df[tax_levels.keys()].drop_duplicates().copy()\n",
     "    \n",
     "    hierarchies.columns = list(tax_levels.values())\n",
@@ -897,7 +959,7 @@
     "                else:\n",
     "                    logging.error(f'{tax_col} column, SERIES {s}: \"{tname}\" not found in NCBI Taxonomy')\n",
     "        \n",
-    "        expected_rank = tax_level\n",
+    "        \n",
     "        \n",
     "        for tname, tids in tax_info[tax_level].items():\n",
     "            \n",
@@ -908,13 +970,8 @@
     "            s = index_ranges(df[df[tax_col].str.match(f'^{tname}$', case=False)])\n",
     "                        \n",
     "            if len(tids) == 1:\n",
-    "                if ranks[upd_tid] != expected_rank: \n",
-    "                    # TODO warning->info for ORDER\n",
-    "                    if tax_col == 'PREDICTED_ORDER_OR_GROUP':\n",
-    "                        logging.info(f'{tax_col} column, SERIES {s}: found unexpected rank for \"{tname}\" '\n",
-    "                                     f'(taxid {upd_tid}): \"{ranks[upd_tid]}\"')\n",
-    "                    else:\n",
-    "                        logging.error(f'{tax_col} column, SERIES {s}: found unexpected rank for \"{tname}\" '\n",
+    "                if ranks[upd_tid] not in expected_ranks[tax_level]: \n",
+    "                    logging.error(f'{tax_col} column, SERIES {s}: found unexpected rank for \"{tname}\" '\n",
     "                                      f'(taxid {upd_tid}): \"{ranks[upd_tid]}\"')\n",
     "                    \n",
     "            if len(tids) > 1:            \n",
@@ -1003,7 +1060,12 @@
     "            if genus_id not in species_lineage:\n",
     "                logging.error(\n",
     "                    f'PREDICTED_SCIENTIFIC_NAME column, SERIES {s}: '\n",
-    "                    f'species \"{r.species}\" (taxid {species_id}) does not belong to \"{r.family}\" (taxid {genus_id})')\n",
+    "                    f'species \"{r.species}\" (taxid {species_id}) does not belong to \"{r.genus}\" (taxid {genus_id})')\n",
+    "            elif r.species.split(' ')[0] != r.genus:\n",
+    "                logging.error(\n",
+    "                    f'PREDICTED_SCIENTIFIC_NAME column, SERIES {s}: '\n",
+    "                    f'species \"{r.species}\" (taxid {species_id}) states a different genus name than '\n",
+    "                    f'\"{r.genus}\" (taxid {genus_id})')\n",
     "        except KeyError:\n",
     "            logging.info(f'PREDICTED_SCIENTIFIC_NAME value \"{r.species}\" not in NCBI Taxonomy, '\n",
     "                         f'skipping taxonomy consistency check')\n",
