--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -60,7 +60,7 @@
     "    \n",
     "    # orange cols\n",
     "    # RACK_OR_PLATE_ID, TUBE_OR_WELL_ID\n",
-    "    df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')\n",
+    "    df, gal = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')\n",
     "    # check blanks\n",
     "    is_blank = check_blanks(df)\n",
     "    if df[~is_blank].shape[0] == 0:\n",
