escape regex in taxon matching

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -24,6 +24,7 @@
     "import pickle\n",
     "import ete3\n",
     "import geopy\n",
+    "import re\n",
     "from geopy.geocoders import Nominatim\n",
     "from geopy.extra.rate_limiter import RateLimiter"
    ]
@@ -904,8 +905,8 @@
     "    }\n",
     "    \n",
     "    expected_ranks = {\n",
-    "            'order':('order','class'),\n",
-    "            'family':('family','superfamily','subfamily','tribe','subtribe'),\n",
+    "            'order':('class','subclass','order'),\n",
+    "            'family':('suborder','superfamily','family','subfamily','tribe','subtribe'),\n",
     "            'genus':('genus','subgenus'),\n",
     "            'species':('species')\n",
     "        }\n",
@@ -948,7 +949,7 @@
     "        unmatched_names = set(tax_names) - set(tax_info[tax_level].keys())\n",
     "        if len(unmatched_names) > 0:\n",
     "            for tname in unmatched_names:\n",
-    "                s = index_ranges(df[df[tax_col].str.match(f'^{tname}$', case=False)])\n",
+    "                s = index_ranges(df[df[tax_col].str.match(f'^{re.escape(tname)}$', case=False)])\n",
     "                if tax_level == 'species' and anospp:\n",
     "                    if tname in harbach_spp:\n",
     "                        logging.warning(f'{tax_col} column, SERIES {s}:'\n",
@@ -967,7 +968,7 @@
     "            \n",
     "            upd_tid = tids[0]\n",
     "            \n",
-    "            s = index_ranges(df[df[tax_col].str.match(f'^{tname}$', case=False)])\n",
+    "            s = index_ranges(df[df[tax_col].str.match(f'^{re.escape(tname)}$', case=False)])\n",
     "                        \n",
     "            if len(tids) == 1:\n",
     "                if ranks[upd_tid] not in expected_ranks[tax_level]: \n",
@@ -975,10 +976,10 @@
     "                                      f'(taxid {upd_tid}): \"{ranks[upd_tid]}\"')\n",
     "                    \n",
     "            if len(tids) > 1:            \n",
-    "                for tid, r in ranks.items():\n",
-    "                    if r == expected_rank and len(tids) > 1:\n",
+    "                for tid, rank in ranks.items():\n",
+    "                    if rank in expected_ranks[tax_level] and len(tids) > 1:\n",
     "                        logging.debug(f'{tax_col} column, SERIES {s}: using only first matching rank '\n",
-    "                                      f'for \"{tname}\" (taxid {tid}): \"{r}\"')\n",
+    "                                      f'for \"{tname}\" (taxid {tid}): \"{rank}\"')\n",
     "                        upd_tid = tid\n",
     "                        break\n",
     "                else:\n",
@@ -1008,7 +1009,7 @@
     "            \n",
     "            family_lineage = ncbi.get_lineage(family_id)\n",
     "            \n",
-    "            s = index_ranges(df[df['PREDICTED_FAMILY'].str.match(f'^{r.family}$', case=False)])\n",
+    "            s = index_ranges(df[df['PREDICTED_FAMILY'].str.match(f'^{re.escape(r.family)}$', case=False)])\n",
     "            \n",
     "            if order_id not in family_lineage:\n",
     "                logging.error(f'PREDICTED_FAMILY column, SERIES {s}: family \"{r.family}\" (taxid {family_id}) '\n",
@@ -1025,7 +1026,7 @@
     "            \n",
     "            genus_lineage = ncbi.get_lineage(genus_id)\n",
     "            \n",
-    "            s = index_ranges(df[df['PREDICTED_GENUS'].str.match(f'^{r.genus}$', case=False)])\n",
+    "            s = index_ranges(df[df['PREDICTED_GENUS'].str.match(f'^{re.escape(r.genus)}$', case=False)])\n",
     "            \n",
     "            if order_id not in genus_lineage:\n",
     "                logging.error(\n",
@@ -1047,7 +1048,7 @@
     "            \n",
     "            species_lineage = ncbi.get_lineage(species_id)\n",
     "            \n",
-    "            s = index_ranges(df[df['PREDICTED_SCIENTIFIC_NAME'].str.match(f'^{r.species}$', case=False)])\n",
+    "            s = index_ranges(df[df['PREDICTED_SCIENTIFIC_NAME'].str.match(f'^{re.escape(r.species)}$', case=False)])\n",
     "            \n",
     "            if order_id not in species_lineage:\n",
     "                logging.error(\n",
